Avoid use of inefficient constructors
Original author: jluehe
Date: 2006-11-06 21:17:44+00:00

svn path=/trunk/; revision=659