@@ -189,13 +189,13 @@ public class ELSupport {
     public final static Character coerceToCharacter(final Object obj)
             throws IllegalArgumentException {
         if (obj == null || "".equals(obj)) {
-            return new Character((char) 0);
+            return Character.valueOf((char) 0);
         }
         if (obj instanceof String) {
-            return new Character(((String) obj).charAt(0));
+            return Character.valueOf(((String) obj).charAt(0));
         }
         if (ELArithmetic.isNumber(obj)) {
-            return new Character((char) ((Number) obj).shortValue());
+            return Character.valueOf((char) ((Number) obj).shortValue());
         }
         Class objType = obj.getClass();
         if (obj instanceof Character || objType == Character.TYPE) {
